Overflow Build Fixed

--- a/src/App.css
+++ b/src/App.css
@@ -221,7 +221,7 @@ body {
 }
 
 .portfolio-image-box:hover .overflow {
-  opacity: 60%;
+  opacity: 0.6;
   transition: 0.3s ease-in-out;
 }
 
@@ -245,7 +245,7 @@ body {
 }
 
 .portfolio-image-box:hover .portfolio-icon {
-  opacity: 1;
+  opacity: 0.6;
   transition: 0.3s ease-in-out;
   cursor: pointer;
 }
